# itmo-processing-and-generating-images-2023

./: .env.dist  .gitignore  .gitmodules  README.md  docker-compose.yml  dvc.yaml  env.dist  pyproject.toml  utils.py
.dvc/: config
core/: ae.py  autoencoder_modules.py  callback.py  dataset.py  loss.py  transforms.py
src/: test.py  threshold_selector.py  train.py
src/data/: dataset_downloader.py  dataset_preprocessor.py  dataset_splitter.py
