[tool.poetry]
name = "itmo-processing-and-generating-images-2023"
version = "0.1.0"
description = ""
authors = ["starminalush <izy@intersvyaz.net>"]
readme = "README.md"
packages = [{include = "itmo_processing_and_generating_images_2023"}]

[tool.poetry.dependencies]
python = "^3.10"
wandb = "^0.16.1"
kaggle = "^1.5.16"
python-dotenv = "^1.0.0"
dvc = "^3.36.1"
loguru = "^0.7.2"
split-folders = "^0.5.1"
gitpython = ">=3.1.30"
matplotlib = ">=3.3"
numpy = ">=1.22.2"
opencv-python = ">=4.1.1"
pillow = ">=10.0.1"
psutil = "^5.9.7"
pyyaml = ">=5.3.1"
requests = ">=2.23.0"
scipy = ">=1.4.1"
thop = ">=0.1.1"
torch = ">=1.8.0"
torchvision = ">=0.9.0"
tqdm = ">=4.64.0"
ultralytics = ">=8.0.147"
pandas = ">=1.1.4"
seaborn = ">=0.11.0"
setuptools = ">=65.5.1"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
